[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/items/fireball.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/fireball.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/bfxr_sounds/Explosion.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[sub_resource type="CircleShape2D" id=2]
radius = 19.0263

[node name="fireball" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 6.3, 2.3 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )

[node name="soundHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 4.0

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
